# indexlib

./: .gitignore  LICENSE  README.md  indexlib.nix  pyproject.toml
indexlib/: __init__.py  compress.py  index.py
