[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexlib"
version = "0.0.1"
authors = [{ name = "Egor Perevoshchikov", email = "abkein@abkein.ru" }]
description = "Test package"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries",
]
dependencies = ['marshmallow', 'argcomplete', 'tzdata']

[project.scripts]
index = "indexlib.index:main"

[project.urls]
"Homepage" = "https://github.com/abkein/indexlib"
"Bug Tracker" = "https://github.com/abkein/indexlib/issues"
